Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/CRM_Account_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce upon Account inserts and updates</description>
    <label>CRM Account Event - In</label>
    <pluralLabel>CRM Account Events - In</pluralLabel>
</CustomObject>