Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/businessName__c.field-meta.xml
<CustomField>
    <fullName>businessName__c</fullName>
    <label>businessName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>