Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/dexcomID__c.field-meta.xml
<CustomField>
    <fullName>dexcomID__c</fullName>
    <label>dexcomID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>