Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/guardianFirstName__c.field-meta.xml
<CustomField>
    <fullName>guardianFirstName__c</fullName>
    <label>guardianFirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>