Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/homePhone__c.field-meta.xml
<CustomField>
    <fullName>homePhone__c</fullName>
    <label>homePhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>