Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/loginEnabled__c.field-meta.xml
<CustomField>
    <fullName>loginEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>loginEnabled</label>
    <type>Checkbox</type>
</CustomField>