Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/metadata__c.field-meta.xml
<CustomField>
    <fullName>metadata__c</fullName>
    <description>Part of Canonical 2.0.</description>
    <label>metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>