Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/otherPhone__c.field-meta.xml
<CustomField>
    <fullName>otherPhone__c</fullName>
    <label>otherPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>