Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/personalEmail__c.field-meta.xml
<CustomField>
    <fullName>personalEmail__c</fullName>
    <label>personalEmail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>