Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/phoneOptin__c.field-meta.xml
<CustomField>
    <fullName>phoneOptin__c</fullName>
    <label>phoneOptin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>