Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/referenceNumber__c.field-meta.xml
<CustomField>
    <fullName>referenceNumber__c</fullName>
    <label>referenceNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>