Prod-EU/force-app/main/default/objects/CRM_Account_Event__e/fields/workPhone__c.field-meta.xml
<CustomField>
    <fullName>workPhone__c</fullName>
    <label>workPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>